--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     >
 
     <TextView
-        android:id="@+id/txtTitle"
+        android:id="@+id/txtApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -25,7 +25,7 @@
         android:id="@+id/btnCMND"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@+id/txtTitle"
+        android:layout_below="@+id/txtApp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="100dp"
         android:layout_marginRight="20dp"
