--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -15,35 +15,67 @@
         android:layout_height="match_parent"
         android:keepScreenOn="true"
         app:camera_facing="back"
-        app:camera_flash="auto"
         app:camera_focus="continuous"
         app:camera_permissions="camera" />
-
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:alpha="0.3"
-        android:background="@color/black" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:text="Vui lòng chụp đúng trong khung"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:text="Chứng minh thư/Thẻ căn cước"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/txtDir"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="60dp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/txtTitle"
+            android:textColor="#61C793"
+            android:text="CHỤP MẶT TRƯỚC"
+            android:textSize="24sp" />
+        <TextView
+            android:id="@+id/txtNote"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFF"
+            android:layout_above="@id/photoButtonCap"
+
+            android:text="Xin vui lòng\nĐặt giấy tờ nằm vừa khung hình chữ nhật, chụp đủ ánh sáng và rõ nét"
+            android:textSize="20sp" />
+        <ImageView
+            android:id="@+id/photoButtonClose"
+            android:layout_width="150px"
+            android:layout_height="150px"
+            android:layout_alignParentRight="true"
+            android:padding="5dp"
+            android:src="@drawable/close_button" />
+        <ImageView
+            android:id="@+id/photoButtonCap"
+            android:layout_width="200px"
+            android:layout_height="200px"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="50dp"
+            android:backgroundTint="@color/purple_200"
+            android:src="@drawable/nut_chup_hinh" />
+    </RelativeLayout>
 
 
-    <ImageView
-        android:id="@+id/photoButton"
-        android:layout_width="200px"
-        android:layout_height="200px"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/purple_200"
-        android:src="@drawable/nut_chup_hinh" />
+
 
 </FrameLayout>
