--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pp_png"
-    tools:context=".MainActivity_cmnd">
+    android:id="@+id/layout_tutorial"
+    android:background="@drawable/cmt_background"
+    tools:context=".Tutorial">
     <Button
         android:layout_width="match_parent"
         android:layout_height="50dp"
