--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -31,31 +31,34 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/txtDir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/txtTitle"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="60dp"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/txtTitle"
-            android:textColor="#61C793"
             android:text="CHỤP MẶT TRƯỚC"
-            android:textSize="24sp" />
+            android:textColor="#61C793"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/txtNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_centerHorizontal="true"
-            android:textColor="#FFF"
             android:layout_above="@id/photoButtonCap"
-
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
             android:text="Xin vui lòng\nĐặt giấy tờ nằm vừa khung hình chữ nhật, chụp đủ ánh sáng và rõ nét"
-            android:textSize="20sp" />
+            android:textAlignment="center"
+            android:textColor="#FFF"
+
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/photoButtonClose"
             android:layout_width="150px"
