--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="TIẾP TỤC"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         android:id="@+id/btnTiepTuc"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dp"
