--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="background">#182E3F</color>
     <color name="bg_btn">#FE5150</color>
     <color name="colorPrimaryDark">#212226</color>
+    <color name="lableTTCN">#9C7036</color>
+    <color name="contentTTCN">#E63535</color>
 </resources>
